# Conic_filtring

./: CMakeLists.txt  README.md
src/: main.cpp
src/Chaleur/: Information.src  chaleur.cpp  chaleur.hpp  infobackup  main.cpp
src/Conic/: Conic.hpp  main.cpp
src/RadialNonLinear/: main.cpp  menu.cpp  menu.hpp  test.txt  utils.cpp  utils.hpp
